adiciona a foto dos membros do time

--- a/public/index.html
+++ b/public/index.html
@@ -123,9 +123,15 @@
       <h1>Nossa História</h1>
       <div class="history-row">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam
-          nonummy auctor massa. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis,
-          felis ut adipiscing Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis
+          A Respira SP nasceu do encontro de seis jovens brasileiros apaixonados por inovação e qualidade de vida.
+          Durante sua trajetória acadêmica na São Paulo Tech School e experiência profissional na Stefanini, eles perceberam um desafio
+          em comum: a dificuldade de praticar atividades físicas devido à poluição do ar, especialmente no período da manhã, quando a qualidade do
+          ar era crítica. <br> <br>
+          Movidos por essa preocupação e conscientes de que esse problema afetava milhões de paulistanos, decidiram transformar essa dor em uma solução real.
+          Após extensas pesquisas e análises de dados junto a órgãos públicos, nasceu a Respira SP, uma plataforma inovadora voltada para a observação de dados. <br> <br>
+          Nosso objetivo é fornecer gráficos e insights estratégicos para que autoridades e tomadores de decisão possam implementar medidas eficazes de fiscalização e mitigação da poluição. Além disso, valorizamos a participação da população, oferecendo um canal aberto para que todos possam expressar suas preocupações e contribuir ativamente para a construção de um ambiente mais saudável.
+
+          A Respira SP acredita que um ar mais puro significa uma vida melhor. Junte-se a nós nessa missão e respire um futuro mais sustentável para São Paulo!
         </p>
         <img class="pessoas" src="./assets/imgpessoas.png" alt="">
       </div>
@@ -174,7 +180,7 @@
         <p>Shirley Ferreira Lima</p>
       </div>
       <div class="moldura-membro">
-        <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+        <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/D4D03AQFrw-bAfWBKsQ/profile-displayphoto-shrink_800_800/B4DZOtMZlXGUAc-/0/1733777529830?e=1747872000&v=beta&t=0Q5oAtw-NK7zjS6cJ6s0X1nkhwmbuNmZnoHWH_S1A48" 
         alt="Rafael Barbosa Fernandes"/>
         <p>Rafael Barbosa Fernandes</p>
       </div>
@@ -186,17 +192,17 @@
     </div>
     <div class="background-row moldura-desktop">
       <div class="moldura-membro">
-        <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+        <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/D4D03AQGZshTjWYdDjQ/profile-displayphoto-shrink_800_800/B4DZPpjDBOGkAc-/0/1734790099443?e=1747872000&v=beta&t=NaxXvpP4_zj3IjBC4vcpN5x8ZfrwNsyvjdB9LS4yD2s" 
         alt="Ricardo de Oliveira Nicolau"/>
         <p>Ricardo de Oliveira Nicolau</p>
       </div>
       <div class="moldura-membro">
-        <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+        <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/C4E03AQH3oJLvkOfbFg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1647966013473?e=1747872000&v=beta&t=vXfH72vLiRl0DDlqYPSx6umdyMnv_uVt1XP4nqc2lCk" 
         alt="Guilherme Antonio Alves de Souza"/>
         <p>Guilherme Antonio Alves de Souza</p>
       </div>
       <div class="moldura-membro">
-        <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+        <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/D4E03AQELfu7XZdGYJA/profile-displayphoto-shrink_800_800/B4EZThSHFIHUAc-/0/1738946409703?e=1747872000&v=beta&t=ov_XFqBki2ZGC_HS8svd0vZZbxcsr-UTStEdaprXyV8" 
         alt="Lucas Hernandes Furquim"/>
         <p>Lucas Hernandes Furquim</p>
       </div>
@@ -209,7 +215,7 @@
           <p>Shirley Ferreira Lima</p>
         </div>
         <div class="moldura-membro">
-          <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+          <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/D4D03AQFrw-bAfWBKsQ/profile-displayphoto-shrink_800_800/B4DZOtMZlXGUAc-/0/1733777529830?e=1747872000&v=beta&t=0Q5oAtw-NK7zjS6cJ6s0X1nkhwmbuNmZnoHWH_S1A48" 
           alt="Rafael Barbosa Fernandes"/>
           <p>Rafael Barbosa Fernandes</p>
         </div>
@@ -221,19 +227,19 @@
           <p>João Vitor Ohi Santos</p>
         </div>
         <div class="moldura-membro">
-          <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+          <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/D4D03AQGZshTjWYdDjQ/profile-displayphoto-shrink_800_800/B4DZPpjDBOGkAc-/0/1734790099443?e=1747872000&v=beta&t=NaxXvpP4_zj3IjBC4vcpN5x8ZfrwNsyvjdB9LS4yD2s" 
           alt="Ricardo de Oliveira Nicolau">
           <p>Ricardo de Oliveira Nicolau</p>
         </div>
       </div>
       <div class="mobile-moldura-row">
         <div class="moldura-membro">
-          <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+          <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/C4E03AQH3oJLvkOfbFg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1647966013473?e=1747872000&v=beta&t=vXfH72vLiRl0DDlqYPSx6umdyMnv_uVt1XP4nqc2lCk" 
           alt="Guilherme Antonio Alves de Souza">
           <p>Guilherme Antonio Alves de Souza</p>
         </div>
         <div class="moldura-membro">
-          <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
+          <img class="imagem-membro" src="https://media.licdn.com/dms/image/v2/D4E03AQELfu7XZdGYJA/profile-displayphoto-shrink_800_800/B4EZThSHFIHUAc-/0/1738946409703?e=1747872000&v=beta&t=ov_XFqBki2ZGC_HS8svd0vZZbxcsr-UTStEdaprXyV8" 
           alt="Lucas Hernandes Furquim">
           <p>Lucas Hernandes Furquim</p>
         </div>
