--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,7 @@
       <div class="overlay-text">emeoiwjrcnrijcnqeincrqicjcnreenircpircqpjqrc</div>
     </div>
   </div>
-  <div class="historia">
+  <div class="historia" id="historia">
       <h1>Nossa História</h1>
       <div class="history-row">
         <p>
@@ -138,7 +138,7 @@
       </div>
   </div>
 <!--   <hr class="separator-row"> !-->
-  <div class="container">
+  <div class="container" id="crenca">
     <h1>O que acreditamos</h1>
     <div class="container-row">
       <div class="card">
@@ -245,7 +245,7 @@
       </div>
     </div>
   </div>
-  <div class="feedback-container">
+  <div class="feedback-container" id="feedback">
     <p id="howToHelp">Como ajudar</p>
     <h1>A sua contribuição pode fazer a diferença</h1>
     <p id="helpRespira">Nos ajude com seu feedback a valorizar nossa cidade</p>
@@ -253,7 +253,6 @@
       Quero contribuir
     </button>
   </div>
-  
   <footer class="footer">
     <div class="talk-to-us-footer">
       <div class="respira-footer-row">
