adiciona a imagem da ssptech e altera algumas cores

--- a/public/autenticacao.html
+++ b/public/autenticacao.html
@@ -13,7 +13,7 @@
 <body>
   <div class="default-nav-bar">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
     </div>
     <div class="default-nav-links-container">
       <a onclick="goToHistory()">
@@ -37,7 +37,7 @@
   </div>
   <div class="mobile-nav-bar" style="display: none;">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
     </div>
     <button onclick="openSidebar()">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -51,7 +51,7 @@
   </div>
   <div class="sign-up-container">
     <div id="sideBar" class="side-bar">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
       <div class="side-bar-links-container">
         <a onclick="goToHistory(); openSidebar();">
           História
@@ -112,7 +112,7 @@
   <footer class="footer">
     <div class="talk-to-us-footer">
       <div class="respira-footer-row">
-        <img src="./assets/logo.svg" alt="">
+        <img width="20%" src="./assets/logo.svg" alt="">
         Respira São Paulo
       </div>
       <p id="footer-header">Fale Conosco:</p>
