--- a/public/feedback.html
+++ b/public/feedback.html
@@ -22,7 +22,7 @@
       <button id="close-modal">Concluído</button>
   </div>
   <div id="sideBar" class="side-bar">
-    <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+    <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
     <div class="side-bar-links-container">
       <a onclick="goToHistory(); openSidebar();">
         História
@@ -46,7 +46,7 @@
   <div class="feedback-container">
     <div class="default-nav-bar">
       <div class="logo-nav-container">
-        <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+        <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
       </div>
       <div class="default-nav-links-container">
         <a onclick="goToHistory()">
@@ -70,7 +70,7 @@
     </div>
     <div class="mobile-nav-bar" style="display: none;">
       <div class="logo-nav-container">
-        <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+        <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
       </div>
       <button onclick="openSidebar()">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -136,7 +136,7 @@
   <footer class="footer">
     <div class="talk-to-us-footer">
       <div class="respira-footer-row">
-        <img src="./assets/logo.svg" alt="">
+        <img width="20%" src="./assets/logo.svg" alt="">
         Respira São Paulo
       </div>
       <p id="footer-header">Fale Conosco:</p>
