--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <body class="body">
   <div class="default-nav-bar">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
     </div>
     <div class="default-nav-links-container">
       <a onclick="goToHistory()">
@@ -43,7 +43,7 @@
   </div>
   <div class="mobile-nav-bar" style="display: none;">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="20%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
     </div>
     <button onclick="openSidebar()">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -57,7 +57,7 @@
   </div>
   <div class="main-container">
     <div id="sideBar" class="side-bar">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img width="40%" src="./assets/logo.svg" alt="Logo da Respira São Paulo">
       <div class="side-bar-links-container">
         <a onclick="goToHistory(); openSidebar();">
           História
@@ -120,8 +120,9 @@
     </div>
   </div>
   <div class="historia" id="historia">
-      <h1>Nossa História</h1>
+      <h1>Nossa <span style="color: var(--primary-green);">História</span></h1>
       <div class="history-row">
+        <img class="pessoas" src="https://www.sptech.school/assets/images/logos/sptech_logo_negativa_1.png" alt="Logo da SpTech">
         <p>
           A nossa empresa, Respira SP, nasceu do encontro de seis jovens brasileiros apaixonados por inovação. Durante nossa trajetória acadêmica na São Paulo Tech School e experiência profissional na Stefanini, 
           percebemos um desafio em comum: a poluição do ar e seus impactos à qualidade de vida da população. <br> <br>
@@ -134,12 +135,11 @@
 
           Nós acreditamos que um ar mais puro significa uma vida melhor!
         </p>
-        <img class="pessoas" src="./assets/imgpessoas.png" alt="">
       </div>
   </div>
 <!--   <hr class="separator-row"> !-->
   <div class="container" id="crenca">
-    <h1>O que acreditamos</h1>
+    <h1>O que <span style="color: var(--primary-green);">acreditamos</span></h1>
     <div class="container-row">
       <div class="card">
         <img class="card-icon" src="https://cdn-icons-png.flaticon.com/512/470/470222.png" alt="Icone alvo">
@@ -171,7 +171,7 @@
     </div>
   </div>
   <div class="background">
-    <h1>Nosso time</h1>
+    <h1>Nosso <span style="color: var(--primary-green);">time</span></h1>
     <div class="background-row moldura-desktop">
       <div class="moldura-membro">
         <img class="imagem-membro" src="https://i.pinimg.com/236x/ac/85/ba/ac85ba6b0688888b7b5e3c9b739733b3.jpg" 
@@ -256,7 +256,7 @@
   <footer class="footer">
     <div class="talk-to-us-footer">
       <div class="respira-footer-row">
-        <img src="./assets/logo.svg" alt="">
+        <img width="20%" src="./assets/logo.svg" alt="">
         Respira São Paulo
       </div>
       <p id="footer-header">Fale Conosco:</p>
