Cores, ajustes e imagens

--- a/public/feedback.html
+++ b/public/feedback.html
@@ -111,7 +111,7 @@
         <div class="row-container">
           <select id="selectTipoPoluicao">
             <option value="#">
-              Escolha o tipo dessa população
+              Escolha o tipo dessa poluição
             </option>
             <option value="automoveis">
                 Automóveis
