adiciona reponsividade melhorada na tela de feedback e nova logo sem fundo

--- a/public/autenticacao.html
+++ b/public/autenticacao.html
@@ -13,7 +13,7 @@
 <body>
   <div class="default-nav-bar">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img style="width: 15%;"  src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
     </div>
     <div class="default-nav-links-container">
       <a onclick="goToHistory()">
@@ -37,7 +37,7 @@
   </div>
   <div class="mobile-nav-bar" style="display: none;">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img style="width: 15%;"  src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
     </div>
     <button onclick="openSidebar()">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
