--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <body class="body">
   <div class="default-nav-bar">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img style="width: 15%;" src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
     </div>
     <div class="default-nav-links-container">
       <a onclick="goToHistory()">
@@ -43,7 +43,7 @@
   </div>
   <div class="mobile-nav-bar" style="display: none;">
     <div class="logo-nav-container">
-      <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+      <img style="width: 15%;"  src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
     </div>
     <button onclick="openSidebar()">
       <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
@@ -182,7 +182,7 @@
     </div>
   </div>
   <div class="historia" id="historia">
-      <h1>Nossa História</h1>
+      <h1>Nossa <span style="color: var(--primary-green);">História</span></h1>
       <div class="history-row">
         <p>
           A nossa empresa, Respira SP, nasceu do encontro de seis jovens brasileiros apaixonados por inovação. Durante nossa trajetória acadêmica na São Paulo Tech School e experiência profissional na Stefanini, 
@@ -201,7 +201,7 @@
   </div>
 <!--   <hr class="separator-row"> !-->
   <div class="container" id="crenca">
-    <h1>O que acreditamos</h1>
+    <h1>O que <span style="color: var(--primary-green);">acreditamos</span></h1>
     <div class="container-row">
       <div class="card">
         <img class="card-icon" src="https://cdn-icons-png.flaticon.com/512/470/470222.png" alt="Icone alvo">
@@ -233,7 +233,7 @@
     </div>
   </div>
   <div class="background">
-    <h1>Nosso time</h1>
+    <h1>Nosso <span style="color: var(--primary-green);">time</span></h1>
     <div class="background-row moldura-desktop">
       <div class="moldura-membro">
         <img class="imagem-membro" src="./assets/shirley.jpg"  
