--- a/public/feedback.html
+++ b/public/feedback.html
@@ -46,7 +46,7 @@
   <div class="feedback-container">
     <div class="default-nav-bar">
       <div class="logo-nav-container">
-        <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+        <img style="width: 15%;"  src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
       </div>
       <div class="default-nav-links-container">
         <a onclick="goToHistory()">
@@ -70,7 +70,7 @@
     </div>
     <div class="mobile-nav-bar" style="display: none;">
       <div class="logo-nav-container">
-        <img src="./assets/logo.svg" alt="Logo da Respira São Paulo">
+        <img style="width: 15%;"  src="./assets/logo-sem-bg.svg" alt="Logo da Respira São Paulo">
       </div>
       <button onclick="openSidebar()">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
