--- a/public/paginaInterna.html
+++ b/public/paginaInterna.html
@@ -86,16 +86,19 @@
 
         <div class="kpis">
 
-            <div class="primeira-kpi">
-                
+            <div class="primeira-divisao-kpi">
+                <div class="primeira-kpi">
+
+                </div>
+
+                <div class="segunda-kpi">
+
+                </div>
             </div>
+            <div class="primeira-divisao-kpi">
+                <div class="terceira-kpi">
 
-            <div class="segunda-kpi">
-
-            </div>
-
-            <div class="terceira-kpi">
-
+                </div>
             </div>
 
         </div>
@@ -103,6 +106,9 @@
         <div class="filtro">
 
             <!-- AO CLICAR VAI ABRIR UMA DIV NO CENTRO COM OS GRÁFICOS E O FUNDO FICARÁ DESFOCADO -->
+             <div class="filtro-aplicado">
+
+             </div>
 
         </div>
 
