--- a/public/paginaPrincipal.html
+++ b/public/paginaPrincipal.html
@@ -76,21 +76,30 @@
             </div>
 
         </div>
-
-        <div onmouseenter="showUserOptions()" class="img-user" style="display: none;">
-            <div class="user-container">
-                <img id="id-img-user" width="40%" src="./assets/img-user.png" alt="Imagem de Usuário">
+            <div  onmouseenter="showUserOptions()" class="user-container">
+                <div class="user-infos">
+                    <img id="id-img-user options" width="40%" src="./assets/img-user.png" alt="Imagem de Usuário">
+                    <span>Dono de tudo</span>
+                </div>
                 
                 <div class="user-dropdown-options" onmouseleave="hideUserOptions()">
                     <button>Dados Pessoais</button>
                     <button>Filtros Salvos</button>
-                    <button>Tema</button>
-                    <button>Desconectar</button>
+                    <div class="theme-switch-wrapper">
+                        <label class="theme-switch" for="theme-toggle">
+                          <input type="checkbox" id="theme-toggle">
+                          <div class="slider round"></div>
+                        </label>
+                        <span id="theme-label">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-brightness-high" viewBox="0 0 16 16">
+                                <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6m0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708"/>
+                            </svg>
+                        </span>
+                    </div>
+                    <button id="disconectButton">Desconectar</button>
                 </div>
             
             </div>
-        </div>
-
         <!-- FIM NAV BAR -->
 
         <button id="id-button-nav-bar" onclick="openSidebar()">
@@ -245,7 +254,9 @@
                 <div class="escolher-filtro">
 
                     <div class="btn-sair" onclick="fecharFiltro()">
-                        <img id="btn-sair-filtro" width="100%" src="./assets/img-x.png" alt="Sair do Filtro">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+                            <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8z"/>
+                        </svg>
                     </div>
 
                     <div class="filtro-text">
