--- a/public/paginaPrincipal.html
+++ b/public/paginaPrincipal.html
@@ -313,3 +313,4 @@
 <script src="./js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="./js/paginaPrincipal.js"></script>
+<script src="./js/script.js"></script>
