--- a/public/cadastroPersona.html
+++ b/public/cadastroPersona.html
@@ -9,7 +9,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/paginaInterna.css">
     <link rel="stylesheet" href="./css/cadastroPersona.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
         rel="stylesheet">
@@ -44,7 +43,7 @@
             <a onclick="goToCadastrar(); openSidebar();">
                 Cadastrar
             </a>
-            <div class="contem-alerta">
+            <div onmouseenter="showNotifications()" class="contem-alerta">
                 <div class="img-nav-alerta2">
                     <img id="id-img-nav-alerta" width="40%" src="./assets/img-notificacao.png"
                         alt="Imagem de Notificações">
@@ -52,12 +51,56 @@
                 <a onclick="goToAlertas();">
                     Notificações
                 </a>
+                <div class="notification-dropdown" onmouseleave="hideNotifications()">
+                    <div class="notification-dropdown-options">
+                        <div class="notification-container">
+                            <span>27/02/2025 13:26</span>
+                            <button>
+                                Acontecimento muito louco doido explodiu tudo
+                            </button>
+                        </div>
+                        <div class="notification-container">
+                            <span>27/02/2025 13:26</span>
+                            <button>
+                                Acontecimento muito louco doido explodiu tudo
+                            </button>
+                        </div>
+                        <div class="notification-container">
+                            <span>27/02/2025 13:26</span>
+                            <button>
+                                Acontecimento muito louco doido explodiu tudo
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
+        <div onmouseenter="showUserOptions()" class="user-container" style="display: none;">
+            <div class="user-infos">
+                <img id="id-img-user options" width="40%" src="./assets/img-user.png" alt="Imagem de Usuário">
+                <span>Dono de tudo</span>
+            </div>
 
-        <div class="img-user" style="display: none;">
-            <img id="id-img-user" width="40%" src="./assets/img-user.png" alt="Imagem de Usuário">
+            <div class="user-dropdown-options" onmouseleave="hideUserOptions()">
+                <button>Dados Pessoais</button>
+                <button>Filtros Salvos</button>
+                <div class="theme-switch-wrapper">
+                    <label class="theme-switch" for="theme-toggle">
+                        <input type="checkbox" id="theme-toggle">
+                        <div class="slider round"></div>
+                    </label>
+                    <span id="theme-label">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                            class="bi bi-brightness-high" viewBox="0 0 16 16">
+                            <path
+                                d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6m0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8M8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0m0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13m8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5M3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8m10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0m-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0m9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707M4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708" />
+                        </svg>
+                    </span>
+                </div>
+                <button id="disconectButton">Desconectar</button>
+            </div>
+
         </div>
 
         <!-- FIM NAV BAR -->
@@ -109,16 +152,66 @@
 
         <div class="dados-funcionario">
 
+            <div class="contem-tudo-dados">
+
+                <div class="titulo-pagina">
+                    <h1>Novo Registro</h1>
+                </div>
+                <div class="contem-placeholder">
+
+                    <div class="contem-placeholder-dados">
+                        <h3>Nome Completo</h3>
+                        <input type="text" class="place-holder">
+                    </div>
+
+                    <div class="contem-placeholder-dados">
+                        <h3>CPF</h3>
+                        <input type="text"  class="place-holder">
+                    </div>
+
+                    <div class="contem-placeholder-dados">
+                        <h3>Cargo</h3>
+                        <input type="text"  class="place-holder">
+                    </div>
+
+                    <div class="contem-placeholder-dados">
+                        <h3>E-mail</h3>
+                        <input type="text"  class="place-holder">
+                    </div>
+
+                </div>
+
+            </div>
         </div>
 
         <div class="linha-divisoria"></div>
 
         <div class="dados-empresa">
+            <div class="contem-tudo-dados-empresa">
 
+                <div class="contem-placeholder-empresa">
+
+                    <div class="contem-placeholder-dados-empresa">
+                        <h3>Nome da Empresa</h3>
+                        <input type="text" class="place-holder">
+                    </div>
+
+                    <div class="contem-placeholder-dados-empresa">
+                        <h3>CNPJ</h3>
+                        <input type="text"  class="place-holder">
+                    </div>
+
+                    <div class="contem-placeholder-dados-empresa-checkbox">
+                        <input type="checkbox"> <h3>O usuário deve ter acesso de gerente.</h3>
+                    </div>
+                    
+                </div>
+
+            </div>
         </div>
 
         <div class="botao-cadastrar">
-
+            <h3>CADASTRAR</h3>
         </div>
 
 
@@ -133,3 +226,4 @@
 </html>
 
 <script src="./js/index.js"></script>
+<script src="./js/script.js"></script>
