Tela cadastro persona v3 -> html e css finalizado

--- a/public/cadastroPersona.html
+++ b/public/cadastroPersona.html
@@ -159,24 +159,27 @@
                 </div>
                 <div class="contem-placeholder">
 
-                    <div class="contem-placeholder-dados">
-                        <h3>Nome Completo</h3>
-                        <input type="text" class="place-holder">
-                    </div>
+                    <div class="contem-1">
+                        <div class="contem-placeholder-dados">
+                            <h3>Nome Completo</h3>
+                            <input type="text" class="place-holder">
+                        </div>
 
-                    <div class="contem-placeholder-dados">
-                        <h3>CPF</h3>
-                        <input type="text"  class="place-holder">
+                        <div class="contem-placeholder-dados">
+                            <h3>CPF</h3>
+                            <input type="text" class="place-holder">
+                        </div>
                     </div>
+                    <div class="contem-2">
+                        <div class="contem-placeholder-dados">
+                            <h3>Cargo</h3>
+                            <input type="text" class="place-holder">
+                        </div>
 
-                    <div class="contem-placeholder-dados">
-                        <h3>Cargo</h3>
-                        <input type="text"  class="place-holder">
-                    </div>
-
-                    <div class="contem-placeholder-dados">
-                        <h3>E-mail</h3>
-                        <input type="text"  class="place-holder">
+                        <div class="contem-placeholder-dados">
+                            <h3>E-mail</h3>
+                            <input type="text" class="place-holder">
+                        </div>
                     </div>
 
                 </div>
@@ -191,20 +194,25 @@
 
                 <div class="contem-placeholder-empresa">
 
-                    <div class="contem-placeholder-dados-empresa">
-                        <h3>Nome da Empresa</h3>
-                        <input type="text" class="place-holder">
-                    </div>
+                    <div class="contem-3">
 
-                    <div class="contem-placeholder-dados-empresa">
-                        <h3>CNPJ</h3>
-                        <input type="text"  class="place-holder">
+                        <div class="contem-placeholder-dados-empresa">
+                            <h3>Nome da Empresa</h3>
+                            <input type="text" class="place-holder">
+                        </div>
+
+                        <div class="contem-placeholder-dados-empresa">
+                            <h3>CNPJ</h3>
+                            <input type="text" class="place-holder">
+                        </div>
+
                     </div>
 
                     <div class="contem-placeholder-dados-empresa-checkbox">
-                        <input type="checkbox"> <h3>O usuário deve ter acesso de gerente.</h3>
+                        <input type="checkbox">
+                        <h3>O usuário deve ter acesso de gerente.</h3>
                     </div>
-                    
+
                 </div>
 
             </div>
